<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextSiteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/site_name"
        android:padding="16dp" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextSiteName"
        android:hint="@string/site_location"
        android:padding="16dp" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/create"
        android:textColor="@android:color/white" />

</RelativeLayout>
