<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/createButton"
        android:divider="@null"
        android:dividerHeight="0dp" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loadMore"
        android:text="@string/create_fingerprint" />

    <Button
        android:id="@+id/loadMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/clearButton"
        android:text="@string/load_more" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/clear_fingerprint" />

</RelativeLayout>
