<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu_card" />

    <RelativeLayout
        android:id="@+id/keyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bottom_navigation"
        android:padding="5dp"
        android:visibility="visible">


        <TextView
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/editTextName"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="16dp"
            android:layout_toRightOf="@+id/editTextName"
            android:hint="@string/username_input_hint"
            android:textSize="16dp" />


        <LinearLayout
            android:id="@+id/startDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextName"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/effective_time" />

            <EditText
                android:id="@+id/etEffectiveTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="yyyy-MM-dd HH:mm:ss" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/endDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startDateLayout"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/invalid_time" />

            <EditText
                android:id="@+id/etInvalidTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="yyyy-MM-dd HH:mm:ss" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonSave"
            android:gravity="center"
            android:text="--"
            android:textSize="30dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonCancel"
            android:text="@string/create" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:enabled="false"
            android:text="@string/cancel" />

    </RelativeLayout>

</RelativeLayout>
